--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+
+    <color name="red">#FF5722</color>
+    <color name="green">#4CAF50</color>
+    <color name="blue">#2196F3</color>
+    <color name="amber">#FFC107</color>
+    <color name="portalGreen">#39FF14</color>
+    <color name="darkGray">#1A1A1A</color>
+    <color name="electricBlue">#00BFFF</color>
+    <color name="purple">#8A2BE2</color>
+    <color name="softGray">#A9A9A9</color>
+
 </resources>
