--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -22,7 +22,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
-        android:backgroundTint="@color/electricBlue"
         app:layout_constraintTop_toBottomOf="@id/toolbar_layout_details"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,17 +37,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!--
-        <TextView
-            android:id="@+id/nameTVdetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/portalGreen"
-            android:textSize="18sp" />
-        -->
-
         <TextView
             android:id="@+id/statusTVdetails"
             android:layout_width="wrap_content"
@@ -56,7 +44,9 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="@color/portalGreen"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:padding="8dp" />
+
     </LinearLayout>
 
     <TableLayout
