--- a/app/src/main/res/layout/activity_characters_list.xml
+++ b/app/src/main/res/layout/activity_characters_list.xml
@@ -21,5 +21,6 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/black" />
 </androidx.constraintlayout.widget.ConstraintLayout>
