--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
 
-
-
-    <color name="red">#FF5722</color>
-    <color name="green">#4CAF50</color>
-    <color name="blue">#2196F3</color>
-    <color name="amber">#FFC107</color>
-    <color name="portalGreen">#39FF14</color>
-    <color name="darkGray">#1A1A1A</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="portalGreen">#00FF00</color>
     <color name="electricBlue">#00BFFF</color>
-    <color name="purple">#8A2BE2</color>
-    <color name="softGray">#A9A9A9</color>
+    <color name="darkGray">#333333</color>
+    <color name="lightGray">#CCCCCC</color>
+    <color name="pink">#FF69B4</color>
 
 </resources>
